--- a/assignment_24.ipynb
+++ b/assignment_24.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyPHXOjhWEaJs5XuYstDxjGZ",
+      "authorship_tag": "ABX9TyM6XnIKx/pTlfTdS8iD5kBG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,75 +28,54 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "6wSQz5N22Zkf"
-      },
-      "outputs": [],
-      "source": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
-        "1) . What is the difference between enclosing a list comprehension in square brackets and parentheses?\n",
+        "1. What is the relationship between def statements and lambda expressions ?\n",
         "\n",
-        "\n"
+        "def statement is used to create a normal function. where as lamba expressions are used to create Anonymous functions. which can be assigned to a variable and can be called using the variable later in function.\n",
+        "\n",
+        "Lambda's body is a single expression and not a block of statements like def statement. The lambda expression's body is similar to what we'd put in a def body's return statement. We simply type the result as an expression instead of explicitly returning it. Because it is limited to an expression, a lambda is less general than a def statement.\n"
       ],
       "metadata": {
-        "id": "S5wCDVGr2csC"
+        "id": "LtpBU1Nbv1rs"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "##List Comprehension with square brackets produces list.\n",
-        "list = [i for i in range(10)]\n",
-        "list"
-      ],
-      "metadata": {
-        "id": "3Qeio_eU2tSz"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "##List Comprehension with parentheses creates generators\n",
-        "list = (i for i in range(10))\n",
-        "list"
-      ],
-      "metadata": {
-        "id": "2oK5qhG_24mr"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "2) What is the relationship between generators and iterators?\n",
-        "#iterator:\n",
-        "An iterator is an object which contains a countable number of values and it is used to iterate over iterable objects like list, tuples etc\n",
-        "Using an iterator-\n",
-        "iter() keyword is used to create an iterator containing an iterable object.\n",
-        "next() keyword is used to call the next element in the iterable object.\n"
+        "2. What is the benefit of lambda?\n",
+        "\n",
+        "The following are some of the benefits of lambda expressions:\n",
+        "\n",
+        "1.Can be used to create Nameless/Anonymous functions inside some complex functions if we are planning to use it only once.\n",
+        "2.Moderate to small functions can be created in a single line\n",
+        "Fuctions created using lambda expressions can be assigned to a variable and can be used by simply calling the variable\n"
       ],
       "metadata": {
-        "id": "jQnvg55u3XdK"
+        "id": "B1rqWzQtwtTe"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "3. Compare and contrast map, filter, and reduce.\n",
+        "\n",
+        "The map() function is a type of higher-order. This function takes another function as a parameter\n",
+        "along with a sequence of iterables and returns an output after applying the function to each iterable present in the sequence."
+      ],
+      "metadata": {
+        "id": "rC2S8nv_w6Ed"
       }
     },
     {
       "cell_type": "code",
       "source": [
-        "iter_list = iter(['Apple', 'Orange', 'Banana'])\n",
-        "print(next(iter_list))\n",
-        "print(next(iter_list))\n",
-        "print(next(iter_list))"
+        "\n",
+        "\n",
+        "print('Map ->',list(map(lambda x:x+x, [1,2,3,4])))"
       ],
       "metadata": {
-        "id": "KtayTQgt3pLS"
+        "id": "mHWQU4isxdTF"
       },
       "execution_count": null,
       "outputs": []
@@ -104,42 +83,19 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#generator :\n",
-        "It is another way of creating iterators in a simple way where it uses the keyword “yield” instead of returning it in a defined function\n",
-        "Generators are implemented using a function\n",
-        "Here, the yield function returns the data without affecting or exiting the function. \n",
-        "It will return a sequence of data in an iterable format where we need to iterate over the sequence to use the data as they won’t store the entire sequence in the memory\n",
-        "By using next() function we can iterate the output of generator function"
+        "The filter() function is used to create an output list consisting of values for which the function returns true."
       ],
       "metadata": {
-        "id": "B27r8JS73trb"
+        "id": "uhfm-MmexsZb"
       }
     },
     {
       "cell_type": "code",
       "source": [
-        "def my_generator(n):\n",
-        "\n",
-        "    # initialize counter\n",
-        "    value = 0\n",
-        "\n",
-        "    # loop until counter is less than n\n",
-        "    while value < n:\n",
-        "\n",
-        "        # produce the current value of the counter\n",
-        "        yield value\n",
-        "\n",
-        "        # increment the counter\n",
-        "        value += 1\n",
-        "\n",
-        "# iterate over the generator object produced by my_generator\n",
-        "for value in my_generator(3):\n",
-        "\n",
-        "    # print each value produced by generator\n",
-        "    print(value)"
+        "print('Filter ->',list(filter(lambda x:x%2 !=0, [1,2,3,4])))"
       ],
       "metadata": {
-        "id": "ao4HeAgz30p_"
+        "id": "gtNNNTG3xuzi"
       },
       "execution_count": null,
       "outputs": []
@@ -147,69 +103,105 @@
     {
       "cell_type": "markdown",
       "source": [
-        "\n",
-        "3) What are the signs that a function is a generator function?\n",
-        "\n",
-        "\n",
-        "the signs that a function is a generator function are:\n",
-        "1.Defined with the def keyword\n",
-        "2.Use the yield keyword\n",
-        "3.May contain several yield keywords.\n",
-        "4.Returns an iterator."
+        "The reduce() function, as the name describes, applies a given function to the iterables and returns a single value"
       ],
       "metadata": {
-        "id": "moj1zIP54HvE"
+        "id": "jda9jwtCx_ZP"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from functools import reduce\n",
+        "print('Reduce ->',reduce(lambda x,y:x+y, [1,2,3,4,5,6]))"
+      ],
+      "metadata": {
+        "id": "EMBZ_x6EyATM"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "4. What are function annotations, and how are they used?:\n",
+        "\n",
+        "Function annotations are arbitrary python expressions that are associated with various part of functions. These expressions are evaluated at compile time and have no life in python’s runtime environment. Python does not attach any meaning to these annotations. They take life when interpreted by third party libraries, for example, mypy.\n",
+        "Python supports dynamic typing and hence no module is provided for type checking. Annotations like\n",
+        "[def foo(a:”int”, b:”float”=5.0)  -> ”int”]"
+      ],
+      "metadata": {
+        "id": "X1JdgnjEyNe7"
       }
     },
     {
       "cell_type": "markdown",
       "source": [
-        "4) What is the purpose of a yield statement?\n",
+        "5. What are recursive functions, and how are they used?\n",
         "\n",
-        "\n",
-        "Using yield keyword is highly memory efficient, since the execution happens only when the caller iterates over the object.\n",
-        "As the variables states are saved, we can pause and resume from the same point, thus saving time.\n"
+        "The term Recursion can be defined as the process of defining something in terms of itself. In simple words, it is a process in which a function calls itself directly or indirectly. \n",
+        "example :\n",
+        "  Factorial of a number is the product of all the integers from 1 to that number. For example, the factorial of 3 (denoted as 3!) is 1*2*3 =6.\n",
+        "  factorial(3)          # 1st call with 3\n",
+        "3 * factorial(2)      # 2nd call with 2\n",
+        "3 * 2 * factorial(1)  # 3rd call with 1\n",
+        "3 * 2 * 1             # return from 3rd call as number=1\n",
+        "3 * 2                 # return from 2nd call\n",
+        "6                     # return from 1st call"
       ],
       "metadata": {
-        "id": "PZ4QuAKK4rDu"
+        "id": "2ASmOTxDyxH9"
       }
     },
     {
       "cell_type": "markdown",
       "source": [
-        "5) What is the relationship between map calls and list comprehensions? Make a comparison and contrast between the two.\n",
-        "\n",
-        "Map function:\n",
-        "Suppose we have a function and we want to compute this function for different values in a single line of code . This is where map() function plays its role. map() function returns a map object(which is an iterator) of the results after applying the given function to each item of a given iterable (list, tuple etc.)\n",
-        "\n",
-        "If we already have a function defined, it is often good to use map For example, map(sum, myLists) is more neat than [sum(x) for x in myLists]. You gain the elegance of not having to make up a dummy variable (e.g. sum(x) for x... or sum(_) for _... or sum(readableName) for readableName...) which you have to type twice, just to iterate.\n",
-        "\n",
-        "List Comprehension:\n",
-        "List Comprehension is a substitute for the lambda function, map(), filter() and reduce()\n",
+        "6. What are some general design guidelines for coding functions?\n",
         "\n",
         "\n",
-        "Comparision :\n",
-        "    1. List comprehension is more concise and easier to read as compared to map\n",
-        "    2. List comprehension allows filtering. In map, we have no such facility\n",
-        "    For example, to print all even numbers in range of 100, we can write [n for n in range(100) if n%2 == 0]. There is \n",
-        "    no alternate for it in map\n",
-        "    3. List comprehension are used when a list of results is required, where as map only returns a map object and does \n",
-        "    not return any list.\n",
-        "    4. List comprehension is faster than map when we need to evaluate expressions that are too long or complicated \n",
-        "    to express\n",
-        "    5. Map is faster in case of calling an already defined function (as no lambda is required)\n",
-        "    "
+        "In any programming language, functions facilitate code reusability. In simple terms, when you want to do something repeatedly, you can define that something as a function and call that function whenever you need to.\n",
+        "\n",
+        "guidelines:\n",
+        " 1.You need to use the def keyword, give your function a name, followed by a pair of parentheses, and end the line with a colon (:).\n",
+        " 2.If your function takes arguments, the names of the arguments (parameters) are mentioned inside the opening and closing parentheses.\n",
+        "Please note that in function definition, the arguments that your function consumes are referred to as parameters.\n",
+        " 3.When you call the function with specific values for these parameters, they're called arguments or actual parameters. This is because the arguments in the function call are the values used for the function's parameters.\n",
+        "Then, you begin an indented block. This is the body of the function that describes what your function does.\n",
+        " 4.There's a return statement that returns the result of the operation on the arguments. The return statement returns control to the point where the function was originally called.\n",
+        "\n",
+        " \n",
+        "syntax :\n",
+        " def function_name(parameters):\n",
+        "    # What the function does goes here(body)\n",
+        "    return result "
       ],
       "metadata": {
-        "id": "Th_bv1lQ5N9V"
+        "id": "KGmp4MWz0HAf"
       }
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "7. Name three or more ways that functions can communicate results to a caller.\n",
+        "\n",
+        "1. Function can return single value\n",
+        "2. Can return multiple values, tuple\n",
+        "3. can return list,dictionary\n",
+        "4. can return function object\n",
+        "5. can return class object"
+      ],
+      "metadata": {
+        "id": "9p2CM8iZ1Qqv"
+      }
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "IBl5w8WB4lAH"
-      }
+        "id": "mDDlO8a-yRxB"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
