--- a/program_assig_15.ipynb
+++ b/program_assig_15.ipynb
@@ -3,7 +3,6 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "private_outputs": true,
       "provenance": [],
       "authorship_tag": "ABX9TyOS3vcL22l2BS3LOIfSWwn9",
       "include_colab_link": true
@@ -14,7 +13,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "gpuClass": "standard"
   },
   "cells": [
     {
@@ -52,10 +52,22 @@
         "    print(ele,end=' ,')"
       ],
       "metadata": {
-        "id": "mZSmME2NmMks"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mZSmME2NmMks",
+        "outputId": "738c968d-0f05-4640-bf16-b6c781ba3bd7"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0 ,35 ,70 ,"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -84,10 +96,22 @@
         "    print(ele,end=' ,')"
       ],
       "metadata": {
-        "id": "A4XshmqInomh"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "A4XshmqInomh",
+        "outputId": "e51491f6-a272-4148-ca48-ee8f6f8b8f3c"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0 ,2 ,4 ,6 ,8 ,10 ,"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -121,10 +145,23 @@
         "print([genFibonaci(x) for x in range(n)])"
       ],
       "metadata": {
-        "id": "ELZJqWwPoAv6"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ELZJqWwPoAv6",
+        "outputId": "9dd15095-e2bb-4ce5-b894-7a7d7b1c6abb"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter the range  :7\n",
+            "[0, 1, 1, 2, 3, 5, 8]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -153,10 +190,25 @@
         "    getUsernames()"
       ],
       "metadata": {
-        "id": "30M2y5ymo_Fu"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "30M2y5ymo_Fu",
+        "outputId": "43b6d69e-c025-48f2-c20c-5b6ced1e7b18"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter Email Address(es): john@google.com\n",
+            "Username of john@google.com is john\n",
+            "Enter Email Address(es): johny@google.com\n",
+            "Username of johny@google.com is johny\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -185,10 +237,22 @@
         "print(square.area())"
       ],
       "metadata": {
-        "id": "UEbjVNxzp7MY"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UEbjVNxzp7MY",
+        "outputId": "302ee3a9-d9a3-458c-93a4-999af62530d0"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2500\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
