--- a/program_assign_14.ipynb
+++ b/program_assign_14.ipynb
@@ -3,9 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyMDKMa7vMaKTvPvQ2D593h1",
+      "authorship_tag": "ABX9TyMiHsk7+9MJHlzzj4TTFm64",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -14,7 +13,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "gpuClass": "standard"
   },
   "cells": [
     {
@@ -30,7 +30,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Define a class with a generator which can iterate the numbers, which are divisible by 7, between a given range 0 and n."
+        "1.Define a class with a generator which can iterate the numbers, which are divisible by 7, between a given range 0 and n."
       ],
       "metadata": {
         "id": "uSBt6fzleByv"
@@ -49,18 +49,41 @@
         "             print(i)\n",
         "             yield(i)\n",
         "\n",
-        "putNumbers(100)"
+        "putNumbers(n)"
       ],
       "metadata": {
-        "id": "95Wc6rj5e8Ur"
+        "id": "95Wc6rj5e8Ur",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "24609429-d4b1-403b-a91d-e05139417ec3"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "100\n",
+            "[0, 7, 14, 21, 28, 35, 42, 49, 56, 63, 70, 77, 84, 91, 98]\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<generator object putNumbers at 0x7ffa02b58ac0>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Write a program to compute the frequency of the words from the input. The output should output after sorting the key alphanumerically. \n",
+        "2.Write a program to compute the frequency of the words from the input. The output should output after sorting the key alphanumerically. \n",
         "\n",
         "Suppose the following input is supplied to the program:\n",
         "\n",
@@ -110,15 +133,28 @@
         "checkFrequency()"
       ],
       "metadata": {
-        "id": "Gum9jSE9h0d5"
+        "id": "Gum9jSE9h0d5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e568a92b-5756-41dc-b066-d135cfd4d807"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the Input String: New to Python or choosing between Python 2 and Python 3? Read Python 2 or Python 3\n",
+            "2:2 3:1 3?:1 New:1 Python:5 Read:1 and:1 between:1 choosing:1 or:2 to:1 "
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Define a class Person and its two child classes: Male and Female. All classes have a method \"getGender\" which can print \"Male\" for Male class and \"Female\" for Female class."
+        "3.Define a class Person and its two child classes: Male and Female. All classes have a method \"getGender\" which can print \"Male\" for Male class and \"Female\" for Female class."
       ],
       "metadata": {
         "id": "dmgkWBrLiLAT"
@@ -143,15 +179,28 @@
         "Female.getGender()"
       ],
       "metadata": {
-        "id": "1q1VqIPViV-o"
+        "id": "1q1VqIPViV-o",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7696f025-63dc-4159-f5cb-f90e965d47f7"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Male\n",
+            "Female\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Please write a program to generate all sentences where subject is in [\"I\", \"You\"] and verb is in [\"Play\", \"Love\"] and the object is in [\"Hockey\",\"Football\"].\n",
+        "4.Please write a program to generate all sentences where subject is in [\"I\", \"You\"] and verb is in [\"Play\", \"Love\"] and the object is in [\"Hockey\",\"Football\"].\n",
         "\n"
       ],
       "metadata": {
@@ -172,15 +221,34 @@
         "generateSentences()          "
       ],
       "metadata": {
-        "id": "g_tpQJYCio3d"
+        "id": "g_tpQJYCio3d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3aa20226-4fd5-4d40-ea3a-b4c214233aee"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "I Play Hockey\n",
+            "I Play Football\n",
+            "I Love Hockey\n",
+            "I Love Football\n",
+            "You Play Hockey\n",
+            "You Play Football\n",
+            "You Love Hockey\n",
+            "You Love Football\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Please write a program to compress and decompress the string \"hello world!hello world!hello world!hello world!\".\n",
+        "5.Please write a program to compress and decompress the string \"hello world!hello world!hello world!hello world!\".\n",
         "\n"
       ],
       "metadata": {
@@ -220,15 +288,28 @@
         "decompress(\"hello world!hello world!hello world!hello world!\")"
       ],
       "metadata": {
-        "id": "2SFN61x3jDw0"
+        "id": "2SFN61x3jDw0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3230ff13-f1dd-4d18-c2a3-be998559b511"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hel2o world!hel2o world!hel2o world!hel2o world!\n",
+            "hello world!hello world!hello world!hello world!\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Please write a binary search function which searches an item in a sorted list. The function should return the index of element to be searched in the list."
+        "6.Please write a binary search function which searches an item in a sorted list. The function should return the index of element to be searched in the list."
       ],
       "metadata": {
         "id": "YndgwyoIjlTi"
@@ -260,7 +341,7 @@
         "    return -1\n",
         " \n",
         " \n",
-        "# Driver Code\n",
+        "\n",
         "if __name__ == '__main__':\n",
         "    arr = [2, 3, 4, 10, 40]\n",
         "    x = int(input(\"enter the element to be search\"))\n",
@@ -273,10 +354,23 @@
         "        print(\"Element is not present in array\")\n"
       ],
       "metadata": {
-        "id": "IawG45m6kNik"
+        "id": "IawG45m6kNik",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ad62a3a6-d64f-4eb3-c0f4-2831d3a8b4aa"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter the element to be search4\n",
+            "Element is present at index 2\n"
+          ]
+        }
+      ]
     }
   ]
 }
